# 1

./: CMakeLists.txt  Makefile  functions.h  helloworld.c  main.c  ninja.sh
